src/human_study/program_2/python_err_msg.txt
File "./seq2parse/human_study/program_2/original.py", line 2
    if a == 0 OR 0 < a < 10:
              ^^
SyntaxError: invalid syntax
